--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,64 +8,41 @@
     <link rel="stylesheet" href="../static/css/style.css">
 </head>
 <body data-bs-theme="dark">
-<nav class="navbar bg-body-tertiary">
-    <div class="container">
-        <h3>Spinjar777</h3>
-    </div>
-</nav>
-<div id="welcome" class="container-sm position-absolute top-50 start-50 translate-middle text-center">
-    <h3>{{ message }}</h3>
-    <p>Spin Jadi Pintar Max Win Beneran</p>
-    <div class="container-fluid text-center">
-        <div class="row align-items-start px-5 ">
-            <div class="col">
-                <p class="border p-3 rounded-5">
-                    Tanya Perjudian
-                </p>
-            </div>
-            <div class="col">
-                <p class="border p-3 rounded-5">
-                    Tanya Tautan
-                </p>
-            </div>
-            <div class="col">
-                <p class="border p-3 rounded-5">
-                    Tanya Gambar
-                </p>
-            </div>
-        </div>
-    </div>
-</div>
+
+{% include "components/navbar.html"%}
+
+{% if not chat_data %}
+    {% include "components/welcome_message.html"%}
+{% endif %}
 
 <div id="chat-box" class="mt-4 container-sm">
+    {% for chat in chat_data %}
+    <div>
+        <p>{{chat.prompt}}</p>
+        <p>{{chat.answer}}</p>
+    </div>
 
-
+    {% endfor %}
 </div>
 
 <div id="input-box"
      class="position-fixed bottom-0 mb-4 start-50 translate-middle-x p-3 container-sm bg-transparent border border-3 rounded-4">
+    <form method="post" action="/submit">
+        <textarea class="p-0 ps-2 container-fluid form-control bg-transparent border-0 rounded shadow-none"
+                  placeholder="Tanya sesuatu disini..." name="prompt" id="text-input"
+                  rows="1"></textarea>
 
-    <textarea class="p-0 ps-2 container-fluid form-control bg-transparent border-0 rounded shadow-none"
-              placeholder="Tanya sesuatu disini..." name="" id="text-input"
-              rows="1"></textarea>
+        <div class="d-flex justify-content-between">
+            <button class="btn btn-dark p-2 rounded-circle">
+                {% include "components/icons/upload_image_icon.html" %}
+            </button>
 
+            <button class="btn btn-dark p-2 rounded-circle">
+                {% include "components/icons/send_icon.html" %}
+            </button>
+        </div>
 
-    <div class="d-flex justify-content-between">
-        <button class="btn btn-dark p-2 rounded-circle">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                <path fill="#fff"
-                      d="M13 19c0 .7.13 1.37.35 2H5a2 2 0 0 1-2-2V5c0-1.1.9-2 2-2h14a2 2 0 0 1 2 2v8.35c-.63-.22-1.3-.35-2-.35V5H5v14zm.96-6.71l-2.75 3.54l-1.96-2.36L6.5 17h6.85c.4-1.12 1.12-2.09 2.05-2.79zM20 18v-3h-2v3h-3v2h3v3h2v-3h3v-2z"/>
-            </svg>
-        </button>
-        <button class="btn btn-dark p-2 rounded-circle">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                <path fill="#fefcfc"
-                      d="M4.4 19.425q-.5.2-.95-.088T3 18.5V14l8-2l-8-2V5.5q0-.55.45-.837t.95-.088l15.4 6.5q.625.275.625.925t-.625.925z"/>
-            </svg>
-        </button>
-    </div>
-
-
+    </form>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
