--- a/app/templates/components/welcome_message.html
+++ b/app/templates/components/welcome_message.html
@@ -1,5 +1,5 @@
 <div id="welcome" class="container-sm position-absolute top-50 start-50 translate-middle text-center">
-    <h3>{{ message }}</h3>
+    <h3>Welcome</h3>
     <p>Spin Jadi Pintar Max Win Beneran</p>
     <div class="container-fluid text-center">
         <div class="row align-items-start px-5 ">
