--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,52 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>FastAPI App</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+        integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="../static/css/style.css">
 </head>
+
 <body data-bs-theme="dark">
 
-{% include "components/navbar.html"%}
+    {% include "components/navbar.html"%}
 
-{% if not chat_data %}
+    <!-- chat_data variabel merupakan List[ChatData], sedangkan ChatData merupakan tabel riwayat chat pengguna dari database -->
+    {% if not chat_data %}
     {% include "components/welcome_message.html"%}
-{% endif %}
+    {% endif %}
 
-<div id="chat-box" class="mt-4 container-sm">
-    {% for chat in chat_data %}
-    <div>
-        <p>{{chat.prompt}}</p>
-        <p>{{chat.answer}}</p>
-    </div>
+    <div id="chat-box" class="mt-4 container-sm">
+        {% for chat in chat_data %}
+        <div>
+            <p>You: {{chat.message_content}}</p>
+            {% if chat.bot_answer %}
+            <p>Bot: {{ chat.bot_answer }}</p>
+            {% endif %}
 
-    {% endfor %}
-</div>
-
-<div id="input-box"
-     class="position-fixed bottom-0 mb-4 start-50 translate-middle-x p-3 container-sm bg-transparent border border-3 rounded-4">
-    <form method="post" action="/submit">
-        <textarea class="p-0 ps-2 container-fluid form-control bg-transparent border-0 rounded shadow-none"
-                  placeholder="Tanya sesuatu disini..." name="prompt" id="text-input"
-                  rows="1"></textarea>
-
-        <div class="d-flex justify-content-between">
-            <button class="btn btn-dark p-2 rounded-circle">
-                {% include "components/icons/upload_image_icon.html" %}
-            </button>
-
-            <button class="btn btn-dark p-2 rounded-circle">
-                {% include "components/icons/send_icon.html" %}
-            </button>
         </div>
 
-    </form>
-</div>
+        {% endfor %}
+    </div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+    <div id="input-box"
+        class="position-fixed bottom-0 mb-4 start-50 translate-middle-x p-3 container-sm bg-transparent border border-3 rounded-4">
+        <form method="post" action="/submit">
+            <textarea class="p-0 ps-2 container-fluid form-control bg-transparent border-0 rounded shadow-none"
+                placeholder="Tanya sesuatu disini..." name="prompt" id="text-input" rows="1"></textarea>
+
+            <div class="d-flex justify-content-between">
+                <button class="btn btn-dark p-2 rounded-circle">
+                    {% include "components/icons/upload_image_icon.html" %}
+                </button>
+
+                <button class="btn btn-dark p-2 rounded-circle">
+                    {% include "components/icons/send_icon.html" %}
+                </button>
+            </div>
+
+        </form>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
