chat main structure

--- a/app/templates/components/navbar.html
+++ b/app/templates/components/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar bg-body-tertiary">
+<nav class="navbar bg-body-tertiary sticky-top">
     <div class="container">
         <h3>Spinjar777</h3>
     </div>
