--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -19,42 +19,50 @@
     {% endif %}
 
     <div id="chat-box" class="mt-4 container-sm">
-      
+
         {% for chat in chat_data %}
-        <div>
-            <p>You: {{chat.message_content}}</p>
-            {% if chat.bot_answer %}
-            <p>Bot: {{ chat.bot_answer }}</p>
-            {% endif %}
+        <div class="text-end">
+            <p class="d-inline-block p-3 bg-body-secondary rounded-start-pill rounded-bottom-pill text-end text-wrap">
+                {{chat.message_content}}
+            </p>
 
         </div>
-
+        {% if chat.bot_answer %}
+        <p class="text-start">{{ chat.bot_answer }}</p>
+        {% endif %}
         {% endfor %}
-      
+        <div id="empty-offset">
+        </div>
+    </div>
+    <div  id="input-box" class="position-fixed bottom-0 start-50 container-fluid translate-middle-x pt-4">
+        <div
+            class="mb-4 p-3 container-sm border border-3 rounded-4 bg-dark">
+            <form method="post" action="/submit">
+                <textarea class="p-0 ps-2 container-fluid form-control bg-transparent border-0 rounded shadow-none"
+                    placeholder="Tanya sesuatu disini..." name="prompt" id="text-input" rows="1"></textarea>
+
+                <div class="d-flex justify-content-between">
+                    <button class="btn btn-dark p-2 rounded-circle">
+                        {% include "components/icons/upload_image_icon.html" %}
+                    </button>
+
+                    <button class="btn btn-dark p-2 rounded-circle">
+                        {% include "components/icons/send_icon.html" %}
+                    </button>
+                </div>
+
+            </form>
+
+
+        </div>
     </div>
 
-    <div id="input-box"
-        class="position-fixed bottom-0 mb-4 start-50 translate-middle-x p-3 container-sm bg-transparent border border-3 rounded-4">
-        <form method="post" action="/submit">
-            <textarea class="p-0 ps-2 container-fluid form-control bg-transparent border-0 rounded shadow-none"
-                placeholder="Tanya sesuatu disini..." name="prompt" id="text-input" rows="1"></textarea>
-
-            <div class="d-flex justify-content-between">
-                <button class="btn btn-dark p-2 rounded-circle">
-                    {% include "components/icons/upload_image_icon.html" %}
-                </button>
-
-                <button class="btn btn-dark p-2 rounded-circle">
-                    {% include "components/icons/send_icon.html" %}
-                </button>
-            </div>
-
-        </form>
-    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
         crossorigin="anonymous"></script>
+    <script src="../static/js/scripts.js">
+    </script>
 </body>
 
 </html>
