--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,10 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>FastAPI App</title>
+    <title>Spinjar777</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="../static/css/style.css">
+    <link rel="icon" type="image/x-icon" href="../static/images/favicon.ico">
 </head>
 
 <body data-bs-theme="dark">
@@ -22,7 +23,7 @@
 
         {% for chat in chat_data %}
         <div class="text-end">
-            <p class="d-inline-block p-3 bg-body-secondary rounded-start-pill rounded-bottom-pill text-end text-wrap">
+            <p id="{{chat.id}}" class="d-inline-block p-3 bg-body-secondary rounded-start-pill rounded-bottom-pill text-end text-wrap">
                 {{chat.message_content}}
             </p>
 
@@ -31,30 +32,28 @@
         <p class="text-start">{{ chat.bot_answer }}</p>
         {% endif %}
         {% endfor %}
-        <div id="empty-offset">
+        <div id="chat-empty-offset">
         </div>
     </div>
-    <div  id="input-box" class="position-fixed bottom-0 start-50 container-fluid translate-middle-x pt-4">
-        <div
-            class="mb-4 p-3 container-sm border border-3 rounded-4 bg-dark">
-            <form method="post" action="/submit">
-                <textarea class="p-0 ps-2 container-fluid form-control bg-transparent border-0 rounded shadow-none"
-                    placeholder="Tanya sesuatu disini..." name="prompt" id="text-input" rows="1"></textarea>
+    <div id="input-box"
+        class="position-fixed bottom-0 start-50 translate-middle-x pt-4 mb-4 p-3 container-sm border border-3 rounded-4 bg-dark">
+        <form method="post" action="/submit">
+            <textarea class="p-0 ps-2 container-fluid form-control bg-transparent border-0 rounded shadow-none"
+                placeholder="Tanya sesuatu disini..." name="prompt" id="text-input" rows="1"></textarea>
 
-                <div class="d-flex justify-content-between">
-                    <button class="btn btn-dark p-2 rounded-circle">
-                        {% include "components/icons/upload_image_icon.html" %}
-                    </button>
+            <div class="d-flex justify-content-between">
+                <button class="btn btn-dark p-2 rounded-circle">
+                    {% include "components/icons/upload_image_icon.html" %}
+                </button>
 
-                    <button class="btn btn-dark p-2 rounded-circle">
-                        {% include "components/icons/send_icon.html" %}
-                    </button>
-                </div>
+                <button class="btn btn-dark p-2 rounded-circle">
+                    {% include "components/icons/send_icon.html" %}
+                </button>
+            </div>
 
-            </form>
+        </form>
 
 
-        </div>
     </div>
 
 
