image input, cancel input, image preview

--- a/app/templates/components/welcome_message.html
+++ b/app/templates/components/welcome_message.html
@@ -1,23 +1,16 @@
 <div id="welcome" class="container-sm position-absolute top-50 start-50 translate-middle text-center">
-    <h3>Welcome</h3>
-    <p>Spin Jadi Pintar Max Win Beneran</p>
-    <div class="container-fluid text-center">
-        <div class="row align-items-start px-5 ">
-            <div class="col">
-                <p class="border p-3 rounded-5">
-                    Tanya Perjudian
-                </p>
-            </div>
-            <div class="col">
-                <p class="border p-3 rounded-5">
-                    Cek Tautan
-                </p>
-            </div>
-            <div class="col">
-                <p class="border p-3 rounded-5">
-                    Cek Gambar
-                </p>
-            </div>
-        </div>
+    <h3>💥 SELAMAT DATANG DI SPINJAR777 💥</h3>
+    <div>
+        <p>Spin Jadi Pintar Max Win Beneran.</p>
+        <p>🎰 Sekali spin, dapet cuan ilmu. </p>
+        <p>💸 Gak ada boncos, gak ada tipu. </p>
+        <p>🧠 Yang digacorin? Logika lo. </p>
+        <p>👉 Gas sekarang, Spin Otak lo dulu bro!
+        </p>
+        <p>Ketik "🎯 MULAI" langsung spin buat dapetin MAXWIN yang beneran.
+
+        </p>
+        <p>Bisa masukin gambar, tangkapan layar, dan link website buat diperiksa biar lo langsung menghindar dan gak kena jebakan judol 🕸️.
+        </p>
     </div>
 </div>
