--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -23,7 +23,8 @@
 
         {% for chat in chat_data %}
         <div class="text-end">
-            <p id="{{chat.id}}" class="d-inline-block p-3 bg-body-secondary rounded-start-pill rounded-bottom-pill text-end text-wrap">
+            <p id="{{chat.id}}"
+                class="d-inline-block p-3 bg-body-secondary rounded-start-pill rounded-bottom-pill text-end text-wrap">
                 {{chat.message_content}}
             </p>
 
@@ -42,9 +43,20 @@
                 placeholder="Tanya sesuatu disini..." name="prompt" id="text-input" rows="1"></textarea>
 
             <div class="d-flex justify-content-between">
-                <button class="btn btn-dark p-2 rounded-circle">
-                    {% include "components/icons/upload_image_icon.html" %}
-                </button>
+                <div>
+                    <button type="button" id="select-image-button" class="btn btn-dark p-2 rounded-circle">
+                        {% include "components/icons/upload_image_icon.html" %}
+                    </button>
+                    <button type="button" id="cancel-image-upload" class="btn btn-dark p-2 rounded-circle d-none">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                            <path fill="currentColor"
+                                d="m8.4 17l3.6-3.6l3.6 3.6l1.4-1.4l-3.6-3.6L17 8.4L15.6 7L12 10.6L8.4 7L7 8.4l3.6 3.6L7 15.6zm3.6 5q-2.075 0-3.9-.788t-3.175-2.137T2.788 15.9T2 12t.788-3.9t2.137-3.175T8.1 2.788T12 2t3.9.788t3.175 2.137T21.213 8.1T22 12t-.788 3.9t-2.137 3.175t-3.175 2.138T12 22m0-2q3.35 0 5.675-2.325T20 12t-2.325-5.675T12 4T6.325 6.325T4 12t2.325 5.675T12 20m0-8" />
+                        </svg>
+                    </button>
+                    <input type="file" id="image-input" accept="image/*" class="d-none">
+                    <img id="image-preview" class="rounded float-end d-none" src="#" width="50" height="50"
+                        alt="Selected Image Preview">
+                </div>
 
                 <button class="btn btn-dark p-2 rounded-circle">
                     {% include "components/icons/send_icon.html" %}
