--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -36,11 +36,12 @@
         <div id="chat-empty-offset">
         </div>
     </div>
+
     <div id="input-box"
         class="position-fixed bottom-0 start-50 translate-middle-x pt-4 mb-4 p-3 container-sm border border-3 rounded-4 bg-dark">
-        <form method="post" action="/submit">
+        <form id="form-submission" method="post" action="/submit" enctype="multipart/form-data">
             <textarea class="p-0 ps-2 container-fluid form-control bg-transparent border-0 rounded shadow-none"
-                placeholder="Tanya sesuatu disini..." name="prompt" id="text-input" rows="1"></textarea>
+                placeholder="Tanya sesuatu disini..." id="text-input" name="message" rows="1"></textarea>
 
             <div class="d-flex justify-content-between">
                 <div>
@@ -48,12 +49,9 @@
                         {% include "components/icons/upload_image_icon.html" %}
                     </button>
                     <button type="button" id="cancel-image-upload" class="btn btn-dark p-2 rounded-circle d-none">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                            <path fill="currentColor"
-                                d="m8.4 17l3.6-3.6l3.6 3.6l1.4-1.4l-3.6-3.6L17 8.4L15.6 7L12 10.6L8.4 7L7 8.4l3.6 3.6L7 15.6zm3.6 5q-2.075 0-3.9-.788t-3.175-2.137T2.788 15.9T2 12t.788-3.9t2.137-3.175T8.1 2.788T12 2t3.9.788t3.175 2.137T21.213 8.1T22 12t-.788 3.9t-2.137 3.175t-3.175 2.138T12 22m0-2q3.35 0 5.675-2.325T20 12t-2.325-5.675T12 4T6.325 6.325T4 12t2.325 5.675T12 20m0-8" />
-                        </svg>
+                        {% include "components/icons/cancel_icon.html" %}
                     </button>
-                    <input type="file" id="image-input" accept="image/*" class="d-none">
+                    <input type="file" id="image-input" name="image" accept="image/*" class="d-none">
                     <img id="image-preview" class="rounded float-end d-none" src="#" width="50" height="50"
                         alt="Selected Image Preview">
                 </div>
